--- a/style.css
+++ b/style.css
@@ -46,32 +46,43 @@
   }
   #bigbanner {width: 100vw;}
   
-  #photoone {
-    position: absolute;
-    top: 650px;
-  left: 30px;
-    width: 200px;
+  .image-wrapper {
+    position: relative;
+    width: 100%;
+    height: 400px; 
+    margin-top: 50px;
+  }
   
+  #photoone, #phototwo, #photothree, #photofour {
+    position: absolute;
+  }
+  
+  #photoone {
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    width: 150px;
   }
   
   #phototwo {
-    position: absolute;
-    top: 650px;
-    right: 30px;
-    width: 200px;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    width: 150px;
   }
   
-    #photothree {
-    position: absolute;
-    top: 300px;
-    right: 70px;
-      width: 150px;}
+  #photothree {
+    top: 0;
+    right: 20%;
+    width: 120px;
+  }
   
-    #photofour {
-    position: absolute;
-    top: 300px;
-    left: 70px;
-      width: 150px;}
+  #photofour {
+    top: 0;
+    left: 20%;
+    width: 120px;
+  }
+  
   
   #lastbanner {
     width: 100vw;
@@ -101,5 +112,3 @@
     font-size: 20px;
     color: rgb(255, 0, 224)
   }
-  
-  
