--- a/style.css
+++ b/style.css
@@ -18,76 +18,62 @@
     justify-content: center;
     color: rgb(255, 0, 245);
   }
-    
   
   .description {
     font-size: 18px;
     font-style: italic;
-   
   }
   
-  .brain {display: flex; 
+  .brain {
+    display: flex;
     justify-content: center;
   }
   
-  .submit button 
-  {display: flex;
-  justify-content: center;
-  background-color: magenta;
+  .submit button {
+    display: flex;
+    justify-content: center;
+    background-color: magenta;
     color: white;
-  font-size: 18px}
+    font-size: 18px;
+  }
   
   #result {
     display: flex;
     justify-content: center;
     font-family: impact;
     font-size: 20px;
-    color: rgb(0, 255, 224)
+    color: rgb(0, 255, 224);
   }
-  #bigbanner {width: 100vw;}
   
-  .image-wrapper {
-    position: relative;
-    width: 100%;
-    height: 400px; 
-    margin-top: 50px;
+  #bigbanner {
+    width: 100vw;
+  }
+  
+  .container {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .body {
+    flex: 1;
+    margin: 20px;
+  }
+  
+  .photos {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: 100px;
   }
   
   #photoone, #phototwo, #photothree, #photofour {
-    position: absolute;
-  }
-  
-  #photoone {
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
     width: 150px;
+    margin-bottom: 20px;
   }
-  
-  #phototwo {
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
-    width: 150px;
-  }
-  
-  #photothree {
-    top: 0;
-    right: 20%;
-    width: 120px;
-  }
-  
-  #photofour {
-    top: 0;
-    left: 20%;
-    width: 120px;
-  }
-  
   
   #lastbanner {
     width: 100vw;
     height: 20px;
-   
   }
   
   #form {
@@ -95,9 +81,12 @@
     justify-content: center;
   }
   
-  #codetype {font-size: 18px;}
+  #codetype {
+    font-size: 18px;
+  }
   
-  #formbutton {position: absolute;
+  #formbutton {
+    position: absolute;
     justify-content: center;
     margin-left: 65px;
     margin-bottom: 50px;
@@ -110,5 +99,6 @@
     justify-content: center;
     font-family: impact;
     font-size: 20px;
-    color: rgb(255, 0, 224)
+    color: rgb(255, 0, 224);
   }
+  
