--- a/style.css
+++ b/style.css
@@ -18,62 +18,65 @@
     justify-content: center;
     color: rgb(255, 0, 245);
   }
+    
   
   .description {
     font-size: 18px;
     font-style: italic;
+   
   }
   
-  .brain {
-    display: flex;
+  .brain {display: flex; 
     justify-content: center;
   }
   
-  .submit button {
-    display: flex;
-    justify-content: center;
-    background-color: magenta;
+  .submit button 
+  {display: flex;
+  justify-content: center;
+  background-color: magenta;
     color: white;
-    font-size: 18px;
-  }
+  font-size: 18px}
   
   #result {
     display: flex;
     justify-content: center;
     font-family: impact;
     font-size: 20px;
-    color: rgb(0, 255, 224);
+    color: rgb(0, 255, 224)
+  }
+  #bigbanner {width: 100vw;}
+  
+  #photoone {
+    position: absolute;
+    top: 650px;
+  left: 30px;
+    width: 200px;
+  
   }
   
-  #bigbanner {
-    width: 100vw;
+  #phototwo {
+    position: absolute;
+    top: 650px;
+    right: 30px;
+    width: 200px;
   }
   
-  .container {
-    display: flex;
-    justify-content: space-between;
-  }
+    #photothree {
+    position: absolute;
+    top: 300px;
+    right: 70px;
+      width: 150px;}
   
-  .body {
-    flex: 1;
-    margin: 20px;
-  }
-  
-  .photos {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    margin-top: 100px;
-  }
-  
-  #photoone, #phototwo, #photothree, #photofour {
-    width: 150px;
-    margin-bottom: 20px;
-  }
+    #photofour {
+    position: absolute;
+    top: 300px;
+    left: 70px;
+      width: 150px;}
   
   #lastbanner {
     width: 100vw;
     height: 20px;
+   
   }
   
   #form {
@@ -81,12 +84,9 @@
     justify-content: center;
   }
   
-  #codetype {
-    font-size: 18px;
-  }
+  #codetype {font-size: 18px;}
   
-  #formbutton {
-    position: absolute;
+  #formbutton {position: absolute;
     justify-content: center;
     margin-left: 65px;
     margin-bottom: 50px;
@@ -99,6 +99,7 @@
     justify-content: center;
     font-family: impact;
     font-size: 20px;
-    color: rgb(255, 251, 0);
+    color: rgb(0, 255, 224)
   }
+  
   
