--- a/style.css
+++ b/style.css
@@ -46,32 +46,33 @@
   }
   #bigbanner {width: 100vw;}
   
-  #photoone {
+
+#photoone, #phototwo, #photothree, #photofour {
     position: absolute;
-    top: 650px;
-  left: 30px;
-    width: 200px;
+    width: 150px;
+    z-index: -1;
+  }
   
+  #photoone {
+    top: 250px;
+    left: 30px;
   }
   
   #phototwo {
-    position: absolute;
-    top: 650px;
-    right: 30px;
-    width: 200px;
+    top: 600px;
+    left: 30px;
   }
   
-    #photothree {
-    position: absolute;
-    top: 300px;
-    right: 70px;
-      width: 150px;}
+  #photothree {
+    top: 250px;
+    right: 30px;
+  }
   
-    #photofour {
-    position: absolute;
-    top: 300px;
-    left: 70px;
-      width: 150px;}
+  #photofour {
+    top: 600px;
+    right: 30px;
+  }
+  
   
   #lastbanner {
     width: 100vw;
