--- a/style.css
+++ b/style.css
@@ -18,24 +18,28 @@
     justify-content: center;
     color: rgb(255, 0, 245);
   }
-    
   
   .description {
     font-size: 18px;
     font-style: italic;
-   
   }
   
-  .brain {display: flex; 
+  .quiz-content {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .quiz {
+    flex: 1;
+  }
+  
+  .submit button {
+    display: flex;
     justify-content: center;
-  }
-  
-  .submit button 
-  {display: flex;
-  justify-content: center;
-  background-color: magenta;
+    background-color: magenta;
     color: white;
-  font-size: 18px}
+    font-size: 18px;
+  }
   
   #result {
     display: flex;
@@ -44,40 +48,48 @@
     font-size: 20px;
     color: rgb(0, 255, 224)
   }
-  #bigbanner {width: 100vw;}
   
-
-#photoone, #phototwo, #photothree, #photofour {
-    position: absolute;
+  #bigbanner {
+    width: 100vw;
+  }
+  
+  .p {
+    display: flex;
+    justify-content: center;
+  }
+  
+  #photoone, #phototwo, #photothree, #photofour {
     width: 150px;
-    z-index: -1;
+    margin: 10px;
   }
   
   #photoone {
-    top: 250px;
-    left: 30px;
+    position: relative;
+    top: 10px;
+    left: -220px;
   }
   
   #phototwo {
-    top: 600px;
-    left: 30px;
+    position: relative;
+    top: 10px;
+    right: -220px;
   }
   
   #photothree {
-    top: 250px;
-    right: 30px;
+    position: relative;
+    top: 70px;
+    right: -300px;
   }
   
   #photofour {
-    top: 600px;
-    right: 30px;
+    position: relative;
+    top: 70px;
+    left: -300px;
   }
-  
   
   #lastbanner {
     width: 100vw;
     height: 20px;
-   
   }
   
   #form {
@@ -85,9 +97,12 @@
     justify-content: center;
   }
   
-  #codetype {font-size: 18px;}
+  #codetype {
+    font-size: 18px;
+  }
   
-  #formbutton {position: absolute;
+  #formbutton {
+    position: absolute;
     justify-content: center;
     margin-left: 65px;
     margin-bottom: 50px;
@@ -102,5 +117,4 @@
     font-size: 20px;
     color: rgb(0, 255, 224)
   }
-  
   
