--- a/codesheet.css
+++ b/codesheet.css
@@ -24,8 +24,8 @@
     font-size: 60px;
     color: magenta;
     z-index: 2;
-    background-color: rgb(0,255,255);
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    background-color: rgb(242, 255, 0);
+    font-family: timesnewroman;
     padding-right: 200px;
     padding-left: 200px;
       
