--- a/codesheet.css
+++ b/codesheet.css
@@ -57,10 +57,10 @@
     font-size: 24px;
     color: rgb(255,0,255);
     text-decoration: none;
-    background-color: rgb(0,255,255);
+    background-color: rgb(221, 255, 0);
     padding: 10px 20px;
     border-radius: 5px;
-    font-family: impact;
+    font-family: timesnewroman;
     transition: all 0.3s ease;
   }
   
